# owo.rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md
examples/: README.md
examples/01_hyper/: Cargo.toml
examples/01_hyper/src/: main.rs
examples/02_reqwest/: Cargo.toml
examples/02_reqwest/src/: main.rs
src/: constants.rs  error.rs  lib.rs  model.rs
src/bridge/: hyper.rs  mod.rs  reqwest.rs
src/bridge/hyper/: mod.rs  oneshot.rs
src/bridge/reqwest/: mod.rs  oneshot.rs
tests/: README.md  test_reqwest_support.rs
